# gauss_map

./: CMakeLists.txt  Readme.md  torus.pcd
src/: gauss_map_sample.cpp
